# sensor-gate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: debug.py  deps.py  health.py  history.py  sensors.py
app/models/: history.py  sensor.py
app/services/: auth.py  influxdb.py  mock_pubsub.py  pubsub.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLOUD_RUN_DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  HISTORICAL_DATA_API.md  MOCK_PUBSUB_GUIDE.md  PUBLIC_ACCESS_GUIDE.md  README.md  TECHNICAL_DOCUMENTATION.md
tests/: __init__.py
