[project]
name = "sensorgate"
version = "0.1.0"
description = "IoT Gateway service for collecting and processing sensor data"
authors = [
    {name = "EgorkaKv",email = "yehor.kvasenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.116.2,<0.117.0",
    "uvicorn>=0.36.0,<0.37.0",
    "pydantic>=2.0.0",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "google-cloud-pubsub (>=2.31.1,<3.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "influxdb-client (>=1.49.0,<2.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

